syntax = "proto3";

package Redpoint.OpenGE.Protocol;

import "Process.proto";

/** File synchronisation for tools */

message QueryToolRequest {
	int64 toolXxHash64 = 1;
}

message QueryToolResponse {
	bool present = 1;
}

message HasToolBlobRequest {
	int64 toolBlobXxHash64 = 1;
	string localHintPath = 2;
}

message HasToolBlobResponse {
	bool exists = 1;
}

message WriteToolBlobRequest {
	int64 toolBlobXxHash64 = 1;
	int64 offset = 2;
	bool finishWrite = 3;
	bytes data = 10;
}

message WriteToolBlobResponse {
	int64 committedSize = 1;
}

message ConstructToolRequest {
	int64 toolXxHash64 = 1;
	map<int64, string> toolBlobXxHash64ToUnixRelativePath = 2;
}

message ConstructToolResponse {
}

/** File synchronisation for data */

message QueryMissingBlobsRequest {
	repeated int64 blobXxHash64 = 1;
}

message QueryMissingBlobsResponse {
	repeated int64 blobXxHash64 = 1;
}

message SendCompressedBlobsRequest {
	bytes zipArchive = 1;
}

message SendCompressedBlobsResponse {
}

/** Process execution */

message LocalTaskDescriptor {
	string path = 1;
	repeated string arguments = 2;
	map<string, string> environmentVariables = 3;
	string workingDirectory = 4;
}

message InputFilesByPath {
	repeated string absolutePaths = 1;
}

message InputFilesByBlobXxHash64 {
	map<string, int64> absolutePathsToBlobs = 2;
}

message RemoteTaskDescriptor {
	oneof tool {
		int64 xxHash64 = 1;
		string localAbsolutePath = 2;
	}
	repeated string arguments = 3;
	map<string, string> environmentVariables = 4;
	string workingDirectory = 5;
	oneof input {
		InputFilesByPath byPath = 6;
		InputFilesByBlobXxHash64 byBlobXxHash64 = 7;
	}
	repeated string outputAbsolutePaths = 8;
}

message CopyTaskDescriptor {
	string fromAbsolutePath = 1;
	string toAbsolutePath = 2;
}

message TaskDescriptor {
	oneof descriptor {
		LocalTaskDescriptor local = 1;
		RemoteTaskDescriptor remote = 2;
		CopyTaskDescriptor copy = 3;
	}
}

message ExecuteTaskRequest {
	TaskDescriptor descriptor = 1;
}

service TaskApi {
	/** File synchronisation for tools */
	rpc QueryTool(QueryToolRequest) returns (QueryToolResponse) {}
	rpc HasToolBlob(HasToolBlobRequest) returns (HasToolBlobResponse) {}
	rpc WriteToolBlob(stream WriteToolBlobRequest) returns (WriteToolBlobResponse) {}
	rpc ConstructTool(ConstructToolRequest) returns (ConstructToolResponse) {}

	/** File synchronisation for data */
	rpc QueryMissingBlobs(QueryMissingBlobsRequest) returns (QueryMissingBlobsResponse) {}
	rpc SendCompressedBlobs(SendCompressedBlobsRequest) returns (SendCompressedBlobsResponse) {}

	/** Task execution */
	rpc ExecuteTask(ExecuteTaskRequest) returns (stream ProcessResponse) {}
}